--- a/kubernetes/deployments/inference-model2-deployment.yaml
+++ b/kubernetes/deployments/inference-model2-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: inference-service-model2
           image: deepanshu0903/nst_app:inference_service_model2
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
           volumeMounts:
