--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,3 +16,7 @@ server {
     try_files $uri $uri/ /index.html;
   }
 }
+
+location /stylize {
+    proxy_pass http://routing_service:8000/stylize;
+  }
