--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,5 +17,8 @@ server {
   location /stylize {
     proxy_pass http://routing_service:8000/stylize;
   }
+  location /feedback {
+    proxy_pass http://routing_service:8000/feedback;
+  }
 
 }
